# nhannht-neo-dotfiles

./: .gitignore  config.yaml  mindmap.MD  mindmap.mmd  mindmap.puml  pyproject.toml  requirements.txt
dotfiles/: bash_profile  bashrc  ideavimrc  profile  tmux.conf  tmux.conf.local  xonshrc
dotfiles/config/i3/: config
dotfiles/config/kitty/: kitty.conf
dotfiles/config/nvim/: init.vim
dotfiles/config/omf/: bundle  init.fish
dotfiles/config/sxhkd/: sxhkdrc
dotfiles/config/vifm/: vifmrc
dotfiles/doom.d/: dot.org
dotfiles/nhannht_scripts/: rofi_recoll.sh  vermin.rasi
dotfiles/org-one/: scratch.el
dotfiles/w3m/: config
