[tool.poetry]
name = "nhannht-neo-dotfiles"
version = "0.1.0"
description = ""
authors = ["nhannht <nhanclassroom@gmail.com>"]
readme = "README.md"
packages = [{include = "nhannht_neo_dotfiles"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
